[gd_scene load_steps=2 format=3 uid="uid://doc7iffcbpptv"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_t4bko"]

[node name="Menu" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.5
offset_top = -81.5
offset_right = 69.5
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_t4bko")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Dawning Republic[/center]"
fit_content = true
autowrap_mode = 0

[node name="b_NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="b_LoadGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="b_Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="b_Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"
